# classification-of-fires

./: .env  .gitignore  MgCX.ipynb  README.md  analysis_df.parquet  best_variant.json  classification-of-fires.rar  clean_df.parquet  docker-compose.yml  experiments_results.csv  extract_dictionaries.py  feature_engineering.py  feature_engineering_ft.py  fire_es.sqlite  labels_best.csv  pyproject.toml  ruff.toml  save_best_model.py  test_fire_es.sqlite  test_import_nan_fix.sqlite  tmp_normative_guard.sqlite  train_f1_macro.py  train_f1_weighted.py  train_final_f1_weighted.py  train_final_models.py  БД-1_(МЧС_ТЭП 2000-2020_v.20.1_.xlsx  тз.docx
app/: streamlit_app.py
docs/: TECHNICAL_README.md
notebooks/: 01_eda.ipynb  02_rank_labeling.ipynb  03_train_and_eval.ipynb
scripts/: auto_test_watch.py  build_exe.bat  build_exe_fast.bat  full_ui_functional_test.py  generate_synthetic_fire_dataset.py  load_to_db.py  ml_rank_tz_audit.py  run_auto_test_watch.bat  run_desktop_dev.bat  run_feature_subset_study.py  run_rank_vs_resource_study.py  run_synthetic_rank_experiment.py  run_ui.bat  smoke_import_workspace.py
tests/: __init__.py  test_assign_rank_tz_use_case.py  test_auto_test_watch.py  test_cleaning.py  test_cluster_analysis.py  test_db.py  test_digital_twin.py  test_digital_twin_desktop_page.py  test_equipment_parse.py  test_event_identity.py  test_feature_availability.py  test_feature_subset_study.py  test_import_data_use_case.py  test_import_preview_modes.py  test_lpr_decision_history.py  test_lpr_feedback_loop.py  test_lpr_page_schema.py  test_metrics_passport.py  test_missing_lpr_inputs.py  test_model_metadata_passport.py  test_model_selection.py  test_model_train.py  test_normatives.py  test_predict.py  test_preprocessor_v3.py  (+11 more)
(+69 files in other folders)
